--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,7 @@
 name: diamond
 version: 0.1.0
+description: |
+  A simple web framework for creating web applications in Crystal.
 
 authors:
   - hudson-newey <grathiumindustries@gmail.com>
